3 September 2004:  Menelaos Karavelas
- test_svd_2_et.C: in definition of sqrt for Gmpq, I qualified the calls to
  to_double and sqrt by CGAL::
- polygon Voronoi diagram demo: fixed bugs in class
  Segment_Voronoi_diagram_vertex_base_with_info_2
- pvd_typedefs.h: replaced SVD_data_structure_2 by AG_data_structure_2

30 August 2004:  Menelaos Karavelas
- SVD_kernel_wrapper_2 : removed unused variable (it was creating warnings
  on some compilers)
- test_types.h : commented usused variable

28 August 2004:  Menelaos Karavelas
- moved split_vertex from Segment_Voronoi_diagram_data_structure_2 to TDS2
- replaced Segment_Voronoi_diagram_data_structure_2 (which is now obsolete)
  by Apollonius_graph_data_structure_2 (until a better name is found...)
- documentation: replaced references to the segment Voronoi diagram concept
  and model by the ones in the Apollonius graph package

27 August 2004:  Menelaos Karavelas
- fixed bug in hierarchy about calling the wrong version of insert_third

20 August 2004:  Menelaos Karavelas
- fixed bugs in copy constructor/assignment operator for the segment
  Voronoi diagram and segment Voronoi diagram hierarchy classes
- using std::list instead of std::set for the input sites container
- using replaced Triple by boost tuple in Site_rep_2

18 August 2004:  Menelaos Karavelas
- updated TODO list
- the input site container now contains handles instead of points: this
  reduces memory usage
- the input site container and point container are now sets instead of lists.
  I may have to change this and use lists again. The reason for this change
  is that sets automatically check whether the inserted item has already been
  inserted; with lists one has to do that explicitly and it is very
  inefficient.
- made the code a bit more memory efficient: storage sites are created at
  the top-most level and are passed throughout the various methods

17 august 2004:  Menelaos Karavelas