@@ -121,15 +121,9 @@ public:
     Sqrt_1 x(a0_, a1_, A_);
     Sqrt_1 y(a2_, a3_, A_);
 
-#ifdef CGAL_USE_ADL_FOR_NT
     Sign s_x = Number_type_traits<Sqrt_1>::sign(x);
     Sign s_y = Number_type_traits<Sqrt_1>::sign(y);
     Sign s_B = Number_type_traits<Sqrt_1>::sign(B_);
-#else
-    Sign s_x = CGAL::sign(x);
-    Sign s_y = CGAL::sign(y);
-    Sign s_B = CGAL::sign(B_);
-#endif
 
     if ( s_B == ZERO ) {
       return s_x;
@@ -141,11 +135,7 @@ public:
       return s_x;
     } else {
       Sqrt_1 Q = CGAL::square(x) - CGAL::square(y) * B_;
-#ifdef CGAL_USE_ADL_FOR_NT
       return Sign(s_x * Number_type_traits<Sqrt_1>::sign(Q));
-#else
-      return Sign(s_x * CGAL::sign(Q));
-#endif
     }
   }
 
@@ -256,8 +246,6 @@ operator-(const Square_root_2<NT>& x, const Square_root_2<NT>& y)
 
 //===================================================================
 
-#ifdef CGAL_USE_ADL_FOR_NT
-
 
 template<class NT>
 struct Number_type_traits< Square_root_2<NT> >
@@ -348,70 +336,6 @@ compare(const Square_root_2<NT>& x,
 {
   return Number_type_traits< Square_root_2<NT> >::compare(x, y);
 }
-
-
-#else // CGAL_USE_ADL_FOR_NT
-
-
-template<class NT>
-inline
-bool
-is_positive(const Square_root_2<NT>& x)
-{
-  return sign(x) == POSITIVE;
-}
-
-template<class NT>
-inline
-bool
-is_negative(const Square_root_2<NT>& x)
-{
-  return sign(x) == NEGATIVE;
-}
-
-template<class NT>
-inline
-bool
-is_zero(const Square_root_2<NT>& x)
-{
-  return sign(x) == ZERO;
-}
-
-
-template<class NT>
-inline
-Sign
-sign(const Square_root_2<NT>& x)
-{
-  return x.sign();
-}
-
-template<class NT>
-inline
-Square_root_2<NT>
-square(const Square_root_2<NT>& x)
-{
-  return x.square();
-}
-
-template<class NT>
-inline
-Comparison_result
-compare(const Square_root_2<NT>& x,
-	const Square_root_2<NT>& y)
-{
-#if CHECK_CGAL_PRECONDITIONS
-  CGAL_precondition( CGAL::compare(x.e(), y.e()) == EQUAL );
-  CGAL_precondition( CGAL::compare(x.f(), y.f()) == EQUAL );
-#endif
-
-  Sign s = CGAL::sign(x - y);
-
-  if ( s == ZERO ) { return EQUAL; }
-  return (s == POSITIVE) ? LARGER : SMALLER;
-}
-
-#endif // CGAL_USE_ADL_FOR_NT
 
 // operator <<
 template<class Stream, class NT>
