@@ -4,6 +4,8 @@
 - polygon Voronoi diagram demo: fixed bugs in class
   Segment_Voronoi_diagram_vertex_base_with_info_2
 - pvd_typedefs.h: replaced SVD_data_structure_2 by AG_data_structure_2
+- Square_root_{1,2}: fixes for g++-3.4 (essentially kept the code under
+  CGAL_USE_ADL_FOR_NT and removed the alternative code)
 
 30 August 2004:  Menelaos Karavelas
 - SVD_kernel_wrapper_2 : removed unused variable (it was creating warnings
